--- a/12_images/android/app/src/main/res/values/strings.xml
+++ b/12_images/android/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="description_take_photo">Take photo</string>
     <string name="description_photo">Photo</string>
     <string name="remove">Remove</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
